fixed header spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,7 @@ h1 {
   color: #FFF1D0;
   max-width: 100%;
   margin: 0 auto;
-  max-height: 90px;
+  max-height: 85px;
   font-size: 6.5em;
 }
 
